:bug: :iphone: use block grid on smaller screens
prevent weird wrapping and weird layout bug on firefox

--- a/src/Components/ContentPage/ContentPage.css
+++ b/src/Components/ContentPage/ContentPage.css
@@ -23,6 +23,10 @@
   text-transform: lowercase;
 }
 
+.ContentPage.grid {
+  display: block;
+}
+
 .ContentPage .links {
   grid-column: 1 / -1;
 }
@@ -32,7 +36,11 @@
   margin-bottom: var(--block-spacing);
 }
 
-@media (min-width: 1080px) {
+@media (min-width: 1080px) {  
+  .ContentPage.grid {
+    display: block;
+  }
+
   .ContentPage .main {
     grid-column: 1 / span 8;
   }
